# work-your-english

./: CMakeLists.txt  README.md  changelog  database.cpp  database.h  dbeditor.cpp  dbeditor.h  dbviewer.cpp  dbviewer.h  dico.db  helpwindow.cpp  helpwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
WorkYourEnglish/: dico.db
WorkYourEnglish/doc/: lang_choice.html
doc/: index.html  show_dic.html
